# pipeai-builder

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: Results_combined.xlsx  Statistical_Tests.ipynb  gpt_generated_pipeline.ipynb
benchmarks/: benchmark_automl_vs_llm.py  benchmark_optuna_vs_llm.py  comparison.py  runner.py
benchmarks/slurm/: README.md  datasets.txt  merge_results.py  run_single_dataset.py  submit_benchmark.sbatch
examples/: hpo_example.py  manual_preprocessing.py  quickstart.py
experiment/: README.md  benchmark_results.csv
src/llm_automl/: __init__.py  dataset.py  designer.py  executor.py  metrics.py  schemas.py
src/llm_automl/hpo/: __init__.py  optimizer.py
