[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-automl"
version = "0.1.0"
description = "Automated Machine Learning with Large Language Models (DeepSeek, Claude, etc.)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "openml>=0.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",  # For OpenAI-compatible APIs (DeepSeek, etc.)
    "anthropic>=0.18.0",  # Optional: for Claude
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
benchmark = [
    "tpot>=0.12.0",
    "scipy>=1.10.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers --cov=llm_automl --cov-report=term-missing"
